--- a/vat.html
+++ b/vat.html
@@ -20,219 +20,218 @@
 
 <div class="main-box">
 	<form action="" id="man_form" name="man_form" method="post" class="basic-grey">
-	<h1>
+		<h1>
+			
+			VAT estimate for male
+			<span style="color:red">
+				Age,height,weight are required. Others are optional. But more data filled in provides more accurate estimates.
+			</span>
+		</h1>
+		<label>
+			<span style="coler:red">
+				Age:<br/>(0~120)
+			</span>
+			<input id="man_age" type="number" name="man_age" placeholder="Age(0~120)" min="0" max="120" value="58"/>
+		</label>
+		<label>
+			<span>
+				Height:<br/>(50~250cm)
+			</span>
+			<input id="man_height" type="number" name="man_height" placeholder="Height(50~250cm)" min="50" max="250" value="180"
+			/>
+		</label>
+		<label>
+			<span>
+				Weight:<br/>(20~250kg)
+			</span>
+			<input id="man_weight" type="number" name="man_weight" placeholder="Weight(20~250kg)" min="20" max="250" value="116.3"
+			/>
+		</label>
+		<label>
+			<span>
+				WC:<br/>(15~250cm)
+			</span>
+			<input id="man_wc" type="number" name="man_wc" placeholder="WC(15~250cm)" min="15" max="250" value="111"
+			/>
+		</label>
+		<label>
+			<span>
+				HC:<br/>(15~250cm)
+			</span>
+			<input id="man_hc" type="number" name="man_hc" placeholder="HC(15~250cm)" min="15" max="250" value="114"
+			/>
+		</label>
+		<label>
+			<span>
+				Whole body fat mass:<br/>(0~150kg)
+			</span>
+			<input id="man_Whole_body_fat_mass" type="number" name="man_Whole_body_fat_mass" placeholder="Whole body fat mass(0~150kg)" min="0" max="150"
+			 value="35.9"/>
+		</label>
+		<label>
+			<span>
+				Whole body fat free mass:<br/>(0~150kg)
+			</span>
+			<input id="man_Whole_body_fat_free_mass" type="number" name="man_Whole_body_fat_free_mass" placeholder="Whole body fat free mass(0~150kg)" min="0" max="150" value="80.4"
+			/>
+		</label>
+		<label>
+			<span>
+				Trunk fat mass:<br/>(0~80kg)
+			</span>
+			<input id="man_Trunk_fat_mass" type="number" name="man_Trunk_fat_mass" placeholder="Trunk fat mass(0~80kg)" min="0" max="80" value="22.5"
+			/>
+		</label>
 		
-        VAT estimate for male
-		<span style="color:red">
-			Age,height,weight are required. Others are optional. But more data filled in provides more accurate estimates.
-		</span>
-	</h1>
-	<label>
-		<span style="coler:red">
-			Age:<br/>(0~120)
-		</span>
-		<input id="man_age" type="number" name="man_age" placeholder="Age(0~120)" min="0" max="120" value="58"/>
-	</label>
-	<label>
-		<span>
-			Height:<br/>(50~250cm)
-		</span>
-		<input id="man_height" type="number" name="man_height" placeholder="Height(50~250cm)" min="50" max="250" value="180"
-		/>
-	</label>
-	<label>
-		<span>
-			Weight:<br/>(20~250kg)
-		</span>
-		<input id="man_weight" type="number" name="man_weight" placeholder="Weight(20~250kg)" min="20" max="250" value="116.3"
-		/>
-	</label>
-	<label>
-		<span>
-			WC:<br/>(15~250cm)
-		</span>
-		<input id="man_wc" type="number" name="man_wc" placeholder="WC(15~250cm)" min="15" max="250" value="111"
-		/>
-	</label>
-	<label>
-		<span>
-			HC:<br/>(15~250cm)
-		</span>
-		<input id="man_hc" type="number" name="man_hc" placeholder="HC(15~250cm)" min="15" max="250" value="114"
-		/>
-	</label>
-	<label>
-		<span>
-			Whole body fat mass:<br/>(0~150kg)
-		</span>
-		<input id="man_Whole_body_fat_mass" type="number" name="man_Whole_body_fat_mass" placeholder="Whole body fat mass(0~150kg)" min="0" max="150"
-		 value="35.9"/>
-	</label>
-	<label>
-		<span>
-			Whole body fat free mass:<br/>(0~150kg)
-		</span>
-		<input id="man_Whole_body_fat_free_mass" type="number" name="man_Whole_body_fat_free_mass" placeholder="Whole body fat free mass(0~150kg)" min="0" max="150" value="80.4"
-		/>
-	</label>
-	<label>
-		<span>
-			Trunk fat mass:<br/>(0~80kg)
-		</span>
-		<input id="man_Trunk_fat_mass" type="number" name="man_Trunk_fat_mass" placeholder="Trunk fat mass(0~80kg)" min="0" max="80" value="22.5"
-		/>
-	</label>
-	
-	<label>
-		<span>
-			Trunk fat free mass:<br/>(0~80kg)
-		</span>
-		<input id="man_Trunk_fat_free_mass" type="number" name="man_Trunk_fat_free_mass" placeholder="Trunk fat free mass(0~80kg)" min="0" max="40" value="42.9"
-		/>
-	</label>
-	<label>
-		<span>
-			Leg fatfree mass:<br/>(0~40kg)
-		</span>
-		<input id="man_Leg_fatfree_mass" type="number" name="man_Leg_fatfree_mass" placeholder="Leg fatfree mass(0~40kg)" min="0" max="40" value="13.75"
-		/>
-	</label>
-	<label>
-		<span>
-			Basal metabolic rate:<br/>(500~30000kJ)
-		</span>
-		<input id="man_Basal_metabolic_rate" type="number" name="man_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000" value="10079"
-		/>
-	</label>
-	<label>
-		<input type="button" class="button" id="man_button" title="Please click the button to calculate" name="man_button" value="Calculate(please click)" onclick="getRisk('man')"/>		
-	</label>
-	
-	<div style="display:none;margin-top: 20px" class="explain" id="man_result_span">
-		<div>
-			result:
+		<label>
+			<span>
+				Trunk fat free mass:<br/>(0~80kg)
+			</span>
+			<input id="man_Trunk_fat_free_mass" type="number" name="man_Trunk_fat_free_mass" placeholder="Trunk fat free mass(0~80kg)" min="0" max="40" value="42.9"
+			/>
+		</label>
+		<label>
+			<span>
+				Leg fatfree mass:<br/>(0~40kg)
+			</span>
+			<input id="man_Leg_fatfree_mass" type="number" name="man_Leg_fatfree_mass" placeholder="Leg fatfree mass(0~40kg)" min="0" max="40" value="13.75"
+			/>
+		</label>
+		<label>
+			<span>
+				Basal metabolic rate:<br/>(500~30000kJ)
+			</span>
+			<input id="man_Basal_metabolic_rate" type="number" name="man_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000" value="10079"
+			/>
+		</label>
+		<label>
+			<input type="button" class="button" id="man_button" title="Please click the button to calculate" name="man_button" value="Calculate(please click)" onclick="getRisk('man')"/>		
+		</label>
+		
+		<div style="display:none;margin-top: 20px" class="explain" id="man_result_span">
+			<div>
+				result:
+			</div>
+			<div id="man_result_info"></div>
+		</div>	
+		<div class="download-box">			
+			<div class="download-input">	
+				For batch calculation, please download the CSV template and prepare the data as the required format.
+				<button type="button" class="button" name="seach" onclick="FuncCSVInport(1)" title="Uploading a CVS file">Batch Calculate</button>
+				<input type="file" accept=".csv" id="csvFileInput_1" onchange="readCSVFile(this,'VAT',1)" style="display:none;"/>
+			</div>		
+			<div>
+				<img src="static/download.png" title="Download the CSV template" onclick="downloadCvsTemplate();"/>
+			</div>
 		</div>
-		<div id="man_result_info"></div>
-	</div>	
-	<div class="download-box">			
-		<div class="download-input">	
-			For batch calculation, please download the CSV template and prepare the data as the required format.
-			<button type="button" class="button" name="seach" onclick="FuncCSVInport(1)" title="Uploading a CVS file">Batch Calculate</button>
-			<input type="file" accept=".csv" id="csvFileInput_1" onchange="readCSVFile(this,'VAT',1)" style="display:none;"/>
-		</div>		
-		<div>
-			<a href="model.csv" title="Download the CSV template"><img src="static/download.png"/></a>
-		</div>
-	</div>
-</form>
-
+	</form>
 
 	<form action="" id="woman_form" name="woman_form" method="post" class="basic-grey">
-	<h1>		
-		VAT estimate for female
-		<span style="color:red">
-			Age,height,weight are required. Others are optional. But more data filled in provides more accurate estimates.
-		</span>
-	</h1>
-	<label>
-		<span style="coler:red">
-			Age:<br/>(0~120)
-		</span>
-		<input id="woman_age" type="number" name="woman_age" placeholder="Age(0~120)" min="0" max="120" value="54"/>
-	</label>
-	<label>
-		<span>
-			Height:<br/>(50~250cm)
-		</span>
-		<input id="woman_height" type="number" name="woman_height" placeholder="Height(50~250cm)" min="50" max="250" value="162"
-		/>
-	</label>
-	<label>
-		<span>
-			Weight:<br/>(20~250kg)
-		</span>
-		<input id="woman_weight" type="number" name="woman_weight" placeholder="Weight(20~250kg)" min="20" max="250" value="56.5"
-		/>
-	</label>
-	<label>
-		<span>
-			WC:<br/>(15~250cm)
-		</span>
-		<input id="woman_wc" type="number" name="woman_wc" placeholder="WC(15~250cm)" min="15" max="250" value="67"
-		/>
-	</label>
-	<label>
-		<span>
-			HC:<br/>(15~250cm)
-		</span>
-		<input id="woman_hc" type="number" name="woman_hc" placeholder="HC(15~250cm)" min="15" max="250" value="98"
-		/>
-	</label>
-	<label>
-		<span>
-			Whole body fat mass:<br/>(0~150kg)
-		</span>
-		<input id="woman_Whole_body_fat_mass" type="number" name="woman_Whole_body_fat_mass" placeholder="Whole body fat mass(0~150kg)" min="0" max="150"
-		 value="14.6"/>
-	</label>
-	<label>
-		<span>
-			Whole body fat free mass:<br/>(0~150kg)
-		</span>
-		<input id="woman_Whole_body_fat_free_mass" type="number" name="woman_Whole_body_fat_free_mass" placeholder="Whole body fat free mass(0~150kg)" min="0" max="150" value="41.9"
-		/>
-	</label>
-	<label>
-		<span>
-			Trunk fat mass:<br/>(0~80kg)
-		</span>
-		<input id="woman_Trunk_fat_mass" type="number" name="woman_Trunk_fat_mass" placeholder="Trunk fat mass(0~80kg)" min="0" max="80"
-		 value="6.7"/>
-	</label>
-	
-	<label>
-		<span>
-			Trunk fat free mass:<br/>(0~80kg)
-		</span>
-		<input id="woman_Trunk_fat_free_mass" type="number" name="woman_Trunk_fat_free_mass" placeholder="Trunk fat free mass(0~80kg)" min="0" max="40"
-		 value="24.2"/>
-	</label>
-	<label>
-		<span>
-			Leg fatfree mass:<br/>(0~40kg)
-		</span>
-		<input id="woman_Leg_fatfree_mass" type="number" name="woman_Leg_fatfree_mass" placeholder="Leg fatfree mass(0~40kg)" min="0" max="40"
-		 value="6.75"/>
-	</label>
-	<label>
-		<span>
-			Basal metabolic rate:<br/>(500~30000kJ)
-		</span>
-		<input id="woman_Basal_metabolic_rate" type="number" name="woman_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000"
-		 value="5171"/>
-	</label>
-	<label>
-		<input type="button" class="button" id="wowoman_button" title="Please click the button to calculate" name="woman_button" value="Calculate(please click)" onclick="getRisk('woman')"/>
-	</label>
-	
-	<div style="display:none;margin-top: 20px" class="explain" id="woman_result_span">
-		<div>
-			result:
+		<h1>		
+			VAT estimate for female
+			<span style="color:red">
+				Age,height,weight are required. Others are optional. But more data filled in provides more accurate estimates.
+			</span>
+		</h1>
+		<label>
+			<span style="coler:red">
+				Age:<br/>(0~120)
+			</span>
+			<input id="woman_age" type="number" name="woman_age" placeholder="Age(0~120)" min="0" max="120" value="54"/>
+		</label>
+		<label>
+			<span>
+				Height:<br/>(50~250cm)
+			</span>
+			<input id="woman_height" type="number" name="woman_height" placeholder="Height(50~250cm)" min="50" max="250" value="162"
+			/>
+		</label>
+		<label>
+			<span>
+				Weight:<br/>(20~250kg)
+			</span>
+			<input id="woman_weight" type="number" name="woman_weight" placeholder="Weight(20~250kg)" min="20" max="250" value="56.5"
+			/>
+		</label>
+		<label>
+			<span>
+				WC:<br/>(15~250cm)
+			</span>
+			<input id="woman_wc" type="number" name="woman_wc" placeholder="WC(15~250cm)" min="15" max="250" value="67"
+			/>
+		</label>
+		<label>
+			<span>
+				HC:<br/>(15~250cm)
+			</span>
+			<input id="woman_hc" type="number" name="woman_hc" placeholder="HC(15~250cm)" min="15" max="250" value="98"
+			/>
+		</label>
+		<label>
+			<span>
+				Whole body fat mass:<br/>(0~150kg)
+			</span>
+			<input id="woman_Whole_body_fat_mass" type="number" name="woman_Whole_body_fat_mass" placeholder="Whole body fat mass(0~150kg)" min="0" max="150"
+			 value="14.6"/>
+		</label>
+		<label>
+			<span>
+				Whole body fat free mass:<br/>(0~150kg)
+			</span>
+			<input id="woman_Whole_body_fat_free_mass" type="number" name="woman_Whole_body_fat_free_mass" placeholder="Whole body fat free mass(0~150kg)" min="0" max="150" value="41.9"
+			/>
+		</label>
+		<label>
+			<span>
+				Trunk fat mass:<br/>(0~80kg)
+			</span>
+			<input id="woman_Trunk_fat_mass" type="number" name="woman_Trunk_fat_mass" placeholder="Trunk fat mass(0~80kg)" min="0" max="80"
+			 value="6.7"/>
+		</label>
+		
+		<label>
+			<span>
+				Trunk fat free mass:<br/>(0~80kg)
+			</span>
+			<input id="woman_Trunk_fat_free_mass" type="number" name="woman_Trunk_fat_free_mass" placeholder="Trunk fat free mass(0~80kg)" min="0" max="40"
+			 value="24.2"/>
+		</label>
+		<label>
+			<span>
+				Leg fatfree mass:<br/>(0~40kg)
+			</span>
+			<input id="woman_Leg_fatfree_mass" type="number" name="woman_Leg_fatfree_mass" placeholder="Leg fatfree mass(0~40kg)" min="0" max="40"
+			 value="6.75"/>
+		</label>
+		<label>
+			<span>
+				Basal metabolic rate:<br/>(500~30000kJ)
+			</span>
+			<input id="woman_Basal_metabolic_rate" type="number" name="woman_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000"
+			 value="5171"/>
+		</label>
+		<label>
+			<input type="button" class="button" id="wowoman_button" title="Please click the button to calculate" name="woman_button" value="Calculate(please click)" onclick="getRisk('woman')"/>
+		</label>
+		
+		<div style="display:none;margin-top: 20px" class="explain" id="woman_result_span">
+			<div>
+				result:
+			</div>
+			<div id="woman_result_info"></div>
+		</div>	
+		
+		<div class="download-box">			
+			<div class="download-input">	
+				For batch calculation, please download the CSV template and prepare the data as the required format.
+				<button type="button" class="button" name="seach" onclick="FuncCSVInport(0)" title="Uploading a CVS file">Batch Calculate</button>
+				<input type="file" id="csvFileInput_0" accept=".csv" onchange="readCSVFile(this,'VAT',0)" style="display:none;"/>		
+			</div>		
+			<div>
+				<img src="static/download.png" title="Download the CSV template" onclick="downloadCvsTemplate();"/>
+			</div>
 		</div>
-		<div id="woman_result_info"></div>
-	</div>	
-	
-	<div class="download-box">			
-		<div class="download-input">	
-			For batch calculation, please download the CSV template and prepare the data as the required format.
-			<button type="button" class="button" name="seach" onclick="FuncCSVInport(0)" title="Uploading a CVS file">Batch Calculate</button>
-			<input type="file" id="csvFileInput_0" accept=".csv" onchange="readCSVFile(this,'VAT',0)" style="display:none;"/>		
-		</div>		
-		<div>
-			<a href="model.csv" title="Download the CSV template"><img src="static/download.png"/></a>
-		</div>
-	</div>
-</form>
+	</form>
 </div>
 
 <div class="mask hide"> 
