--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</span>
 	</h1>
 	<div style = "text-align:left;margin-left:200px;">
-		<a href="vat.html"><input type="button" class="button index-input" value="isceral adipose tissue (VAT) estimate" /></a>
+		<a href="vat.html"><input type="button" class="button index-input" value="Visceral adipose tissue (VAT) estimate" /></a>
 		<br/>
 		<a href="asat.html"><input type="button" class="button index-input" value="Abdominal subcutaneous adipose tissue (ASAT) estimate" /></a>
 		<br/>
