--- a/vat.html
+++ b/vat.html
@@ -7,7 +7,7 @@
 <head>
 <meta content="zh-cn" http-equiv="Content-Language" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>isceral adipose tissue (VAT) estimate</title>
+<title>Visceral adipose tissue (VAT) estimate</title>
 
 <script src="static/jquery-1.12.4.min.js"></script>
 <script src="static/common.js"></script>
