--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 			margin-top:7%;
 			width:1300px
 		}
+		.basic-grey div{
+			text-align:left;
+			margin-left:200px;
+			margin-bottom: 25px;
+		}
 		.index-input{
 			margin-top:20px;
 			font-size:18px;
@@ -34,7 +39,7 @@
 			论文作者论文作者论文作者论文作者论文作者..
 		</span>
 	</h1>
-	<div style = "text-align:left;margin-left:200px;">
+	<div>
 		<a href="vat.html"><input type="button" class="button index-input" value="Visceral adipose tissue (VAT) estimate" /></a>
 		<br/>
 		<a href="asat.html"><input type="button" class="button index-input" value="Abdominal subcutaneous adipose tissue (ASAT) estimate" /></a>
