--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 		</span>
 	</h1>
 	<div>
-		<a href="vat.html"><input type="button" class="button index-input" value="Visceral adipose tissue (VAT) estimate" /></a>
+		<a href="vat.html"><input type="button" class="button index-input" value="Visceral adipose tissue (VAT) volume estimation" /></a>
 		<br/>
-		<a href="asat.html"><input type="button" class="button index-input" value="Abdominal subcutaneous adipose tissue (ASAT) estimate" /></a>
+		<a href="asat.html"><input type="button" class="button index-input" value="Abdominal subcutaneous adipose tissue (ASAT) volume estimation" /></a>
 		<br/>
-		<a href="ffmv.html"><input type="button" class="button index-input" value="Thigh fat-free muscle volume (FFMV) estimate" /></a>
+		<a href="ffmv.html"><input type="button" class="button index-input" value="Thigh fat-free muscle volume (FFMV) volume estimation" /></a>
 	</div>
 </form>
 </div>
