--- a/vat.html
+++ b/vat.html
@@ -104,9 +104,9 @@
 			<input id="man_Basal_metabolic_rate" type="number" name="man_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000" value="10079"
 			/>
 		</label>
-		<div style = "margin-left:-245px;margin-bottom:23px;">
-			* Bioelectrical impedance analysis (BIA) parameters
-		</div>
+		<label>
+			<span style = "width:400px;text-align:left;margin:0 0 23px 12px;">* Bioelectrical impedance analysis (BIA) parameters</span>
+		</label>
 		<label>
 			<input type="button" class="button" id="man_button" title="Please click the button to calculate" name="man_button" value="Calculate(please click)" onclick="getRisk('man')"/>		
 		</label>
@@ -212,9 +212,9 @@
 			<input id="woman_Basal_metabolic_rate" type="number" name="woman_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000"
 			 value="5171"/>
 		</label>
-		<div style = "margin-left:-255px;margin-bottom:23px;">
-			* Bioelectrical impedance analysis (BIA) parameters
-		</div>
+		<label>
+			<span style = "width:400px;text-align:left;margin:0 0 23px 12px;">* Bioelectrical impedance analysis (BIA) parameters</span>
+		</label>
 		<label>
 			<input type="button" class="button" id="wowoman_button" title="Please click the button to calculate" name="woman_button" value="Calculate(please click)" onclick="getRisk('woman')"/>
 		</label>
