--- a/vat.html
+++ b/vat.html
@@ -31,34 +31,34 @@
 			<span style="coler:red">
 				Age:<br/>(0~120years)
 			</span>
-			<input id="man_age" type="number" name="man_age" placeholder="Age(0~120years)" min="0" max="120" value="58"/>
+			<input id="man_age" type="number" name="man_age" placeholder="Age(0~120years)" min="0" max="120"/>
 		</label>
 		<label>
 			<span>
 				Height:<br/>(50~250cm)
 			</span>
-			<input id="man_height" type="number" name="man_height" placeholder="Height(50~250cm)" min="50" max="250" value="180"
+			<input id="man_height" type="number" name="man_height" placeholder="Height(50~250cm)" min="50" max="250"
 			/>
 		</label>
 		<label>
 			<span>
 				Weight:<br/>(20~250kg)
 			</span>
-			<input id="man_weight" type="number" name="man_weight" placeholder="Weight(20~250kg)" min="20" max="250" value="116.3"
+			<input id="man_weight" type="number" name="man_weight" placeholder="Weight(20~250kg)" min="20" max="250"
 			/>
 		</label>
 		<label>
 			<span>
 				 Waist circumference:<br/>(15~250cm)
 			</span>
-			<input id="man_wc" type="number" name="man_wc" placeholder="WC(15~250cm)" min="15" max="250" value="111"
+			<input id="man_wc" type="number" name="man_wc" placeholder="Waist circumference(15~250cm)" min="15" max="250"
 			/>
 		</label>
 		<label>
 			<span>
 				Hip circumference:<br/>(15~250cm)
 			</span>
-			<input id="man_hc" type="number" name="man_hc" placeholder="HC(15~250cm)" min="15" max="250" value="114"
+			<input id="man_hc" type="number" name="man_hc" placeholder="Hip circumference(15~250cm)" min="15" max="250"
 			/>
 		</label>
 		<label>
@@ -66,43 +66,39 @@
 				Whole body fat mass * :<br/>(0~150kg)
 			</span>
 			<input id="man_Whole_body_fat_mass" type="number" name="man_Whole_body_fat_mass" placeholder="Whole body fat mass(0~150kg)" min="0" max="150"
-			 value="35.9"/>
+			 />
 		</label>
 		<label>
 			<span>
 				Whole body fat free mass * :<br/>(0~150kg)
 			</span>
-			<input id="man_Whole_body_fat_free_mass" type="number" name="man_Whole_body_fat_free_mass" placeholder="Whole body fat free mass(0~150kg)" min="0" max="150" value="80.4"
-			/>
+			<input id="man_Whole_body_fat_free_mass" type="number" name="man_Whole_body_fat_free_mass" placeholder="Whole body fat free mass(0~150kg)" min="0" max="150" />
 		</label>
 		<label>
 			<span>
 				Trunk fat mass * :<br/>(0~80kg)
 			</span>
-			<input id="man_Trunk_fat_mass" type="number" name="man_Trunk_fat_mass" placeholder="Trunk fat mass(0~80kg)" min="0" max="80" value="22.5"
-			/>
+			<input id="man_Trunk_fat_mass" type="number" name="man_Trunk_fat_mass" placeholder="Trunk fat mass(0~80kg)" min="0" max="80"/>
 		</label>
 		
 		<label>
 			<span>
 				Trunk fat free mass * :<br/>(0~80kg)
 			</span>
-			<input id="man_Trunk_fat_free_mass" type="number" name="man_Trunk_fat_free_mass" placeholder="Trunk fat free mass(0~80kg)" min="0" max="40" value="42.9"
-			/>
+			<input id="man_Trunk_fat_free_mass" type="number" name="man_Trunk_fat_free_mass" placeholder="Trunk fat free mass(0~80kg)" min="0" max="40"/>
 		</label>
 		<label>
 			<span>
 				Leg fatfree mass * :<br/>(0~40kg)
 			</span>
-			<input id="man_Leg_fatfree_mass" type="number" name="man_Leg_fatfree_mass" placeholder="Leg fatfree mass(0~40kg)" min="0" max="40" value="13.75"
+			<input id="man_Leg_fatfree_mass" type="number" name="man_Leg_fatfree_mass" placeholder="Leg fatfree mass(0~40kg)" min="0" max="40" 
 			/>
 		</label>
 		<label>
 			<span>
 				Basal metabolic rate * :<br/>(500~30000kJ)
 			</span>
-			<input id="man_Basal_metabolic_rate" type="number" name="man_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000" value="10079"
-			/>
+			<input id="man_Basal_metabolic_rate" type="number" name="man_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000"/>
 		</label>
 		<label>
 			<span style = "width:400px;text-align:left;margin:0 0 23px 12px;">* Bioelectrical impedance analysis (BIA) parameters</span>
@@ -139,34 +135,34 @@
 			<span style="coler:red">
 				Age:<br/>(0~120years)
 			</span>
-			<input id="woman_age" type="number" name="woman_age" placeholder="Age(0~120years)" min="0" max="120" value="54"/>
+			<input id="woman_age" type="number" name="woman_age" placeholder="Age(0~120years)" min="0" max="120"/>
 		</label>
 		<label>
 			<span>
 				Height:<br/>(50~250cm)
 			</span>
-			<input id="woman_height" type="number" name="woman_height" placeholder="Height(50~250cm)" min="50" max="250" value="162"
+			<input id="woman_height" type="number" name="woman_height" placeholder="Height(50~250cm)" min="50" max="250"
 			/>
 		</label>
 		<label>
 			<span>
 				Weight:<br/>(20~250kg)
 			</span>
-			<input id="woman_weight" type="number" name="woman_weight" placeholder="Weight(20~250kg)" min="20" max="250" value="56.5"
+			<input id="woman_weight" type="number" name="woman_weight" placeholder="Weight(20~250kg)" min="20" max="250"
 			/>
 		</label>
 		<label>
 			<span>
 				Waist circumference:<br/>(15~250cm)
 			</span>
-			<input id="woman_wc" type="number" name="woman_wc" placeholder="WC(15~250cm)" min="15" max="250" value="67"
+			<input id="woman_wc" type="number" name="woman_wc" placeholder="Waist circumference(15~250cm)" min="15" max="250"
 			/>
 		</label>
 		<label>
 			<span>
 				Hip circumference:<br/>(15~250cm)
 			</span>
-			<input id="woman_hc" type="number" name="woman_hc" placeholder="HC(15~250cm)" min="15" max="250" value="98"
+			<input id="woman_hc" type="number" name="woman_hc" placeholder="Hip circumference(15~250cm)" min="15" max="250"
 			/>
 		</label>
 		<label>
@@ -174,43 +170,39 @@
 				Whole body fat mass * :<br/>(0~150kg)
 			</span>
 			<input id="woman_Whole_body_fat_mass" type="number" name="woman_Whole_body_fat_mass" placeholder="Whole body fat mass(0~150kg)" min="0" max="150"
-			 value="14.6"/>
+			 />
 		</label>
 		<label>
 			<span>
 				Whole body fat free mass * :<br/>(0~150kg)
 			</span>
-			<input id="woman_Whole_body_fat_free_mass" type="number" name="woman_Whole_body_fat_free_mass" placeholder="Whole body fat free mass(0~150kg)" min="0" max="150" value="41.9"
+			<input id="woman_Whole_body_fat_free_mass" type="number" name="woman_Whole_body_fat_free_mass" placeholder="Whole body fat free mass(0~150kg)" min="0" max="150"
 			/>
 		</label>
 		<label>
 			<span>
 				Trunk fat mass * :<br/>(0~80kg)
 			</span>
-			<input id="woman_Trunk_fat_mass" type="number" name="woman_Trunk_fat_mass" placeholder="Trunk fat mass(0~80kg)" min="0" max="80"
-			 value="6.7"/>
+			<input id="woman_Trunk_fat_mass" type="number" name="woman_Trunk_fat_mass" placeholder="Trunk fat mass(0~80kg)" min="0" max="80"/>
 		</label>
 		
 		<label>
 			<span>
 				Trunk fat free mass * :<br/>(0~80kg)
 			</span>
-			<input id="woman_Trunk_fat_free_mass" type="number" name="woman_Trunk_fat_free_mass" placeholder="Trunk fat free mass(0~80kg)" min="0" max="40"
-			 value="24.2"/>
+			<input id="woman_Trunk_fat_free_mass" type="number" name="woman_Trunk_fat_free_mass" placeholder="Trunk fat free mass(0~80kg)" min="0" max="40"/>
 		</label>
 		<label>
 			<span>
 				Leg fatfree mass * :<br/>(0~40kg)
 			</span>
-			<input id="woman_Leg_fatfree_mass" type="number" name="woman_Leg_fatfree_mass" placeholder="Leg fatfree mass(0~40kg)" min="0" max="40"
-			 value="6.75"/>
+			<input id="woman_Leg_fatfree_mass" type="number" name="woman_Leg_fatfree_mass" placeholder="Leg fatfree mass(0~40kg)" min="0" max="40"/>
 		</label>
 		<label>
 			<span>
 				Basal metabolic rate * :<br/>(500~30000kJ)
 			</span>
-			<input id="woman_Basal_metabolic_rate" type="number" name="woman_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000"
-			 value="5171"/>
+			<input id="woman_Basal_metabolic_rate" type="number" name="woman_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000"/>
 		</label>
 		<label>
 			<span style = "width:400px;text-align:left;margin:0 0 23px 12px;">* Bioelectrical impedance analysis (BIA) parameters</span>
